<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">ShopClothes</string>
    <string name="default_web_client_id">608365492504-pef6p0ldcvm1t4g2a2m6rppvv25dedie.apps.googleusercontent.com</string>
    <string name="content_login">THỜI TRANG CHO MỌI NGƯỜI</string>
    <string name="content_email">Email</string>
    <string name="hint_email">example@gmail.com</string>
    <string name="content_password">Mật khẩu</string>
    <string name="hint_password">**********</string>
    <string name="content_forgot_password">Quên mật khẩu?</string>
    <string name="content_button_login">Đăng nhập</string>
    <string name="content_of">Hoặc</string>
    <string name="content_google">Tiếp tục với Google</string>
    <string name="content_facebook">Tiếp tục với Facebook</string>
    <string name="content_have_account">Bạn đã có tài khoản?</string>
    <string name="content_register">Đăng ký</string>
    <string name="content_sen">Gửi</string>
    <string name="content_forgot_password_activity">Quên mật khẩu</string>
    <string name="title_register">Đăng ký tài khoản</string>
    <string name="content_passagain_register">Nhập lại mật khẩu</string>
    <string name="content_button_register">Đăng ký</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="content_home">Trang chủ</string>
    <string name="content_bill">Đơn mua</string>
    <string name="content_bell">Thông báo</string>
    <string name="content_settings">Cài đặt</string>
    <string name="content_search">Tìm kiếm sản phẩm</string>
    <string name="content_bag">0</string>
    <string name="content_product_new">SẢN PHẨM MỚI</string>
    <string name="content_product_outstanding">SẢN PHẨM NỔI BẬT</string>
    <string name="content_product_hint">GỢI Ý SẢN PHẨM</string>
    <string name="content_see_all">Xem tất cả</string>
    <string name="title_product_new">Sản phẩm mới nhất</string>
    <string name="title_product_outstanding">Sản phẩm nổi bật</string>
    <string name="price_sales"><strike>369.000đ</strike> </string>
    <string name="text_size">Size</string>
    <string name="text_quantity">Số lượng</string>
    <string name="text_add_product">Thêm vào giỏ hàng</string>
    <string name="title_detail_product">Chi tiết sản phẩm</string>
    <string name="text_name_product">ONTOP TEE OPTICS</string>
    <string name="text_price_product">295.999đ</string>
    <string name="text_type_product">Unisex - Aothun</string>
    <string name="text_type_detail_product">Unisex-Aothun-UNI_01</string>
    <string name="text_percent">20%</string>
    <string name="text_describe_product">Mô tả sản phẩm</string>
    <string name="text_describ1_line1">Màu sắc chủ đạo của áo khoác là màu đen, tạo nên sự tinh tế và đẳng cấp. Thiết kế cổ áo đứng và khóa kéo phía trước giúp bạn dễ dàng mặc và tháo ra. Bạn cũng có thể điều chỉnh cổ áo bằng nút bấm, tạo nên sự linh hoạt trong việc tạo kiểu.</string>
    <string name="text_see_more">Xem thêm  </string>
    <string name="text_evalute_product">Đánh giá sản phẩm</string>
    <string name="text_rating">4.5/5</string>
    <string name="text_number_feedback">(10 đánh giá)</string>
    <string name="text_name_feedback">Nguyễn Văn A</string>
    <string name="text_checkin_feedback">Đã mua hàng tại Unisex Store</string>
    <string name="text_content_feedback">Áo khoác có thiết kế hiện đại, chất liệu chất lượng cao, và sự tỉ mỉ trong từng đường kim mũi chỉ.</string>
    <string name="text_datetime_feedback">20/11/2023 - 21:12</string>
    <string name="text_see_all">Xem tất cả</string>
    <string name="text_product_relate">SẢN PHẨM LIÊN QUAN</string>
    <string name="text_see_all_bill">Xem chi tiết sản phẩm</string>
    <string name="title_cart">Giỏ hàng</string>
    <string name="text_price">Tiền cần thanh toán</string>
    <string name="number_price">0đ</string>
    <string name="text_oder">Đặt hàng</string>
    <string name="number_oder">(0)</string>
    <string name="text_size_cart">Size-M</string>
    <string name="clear_product_cart">Bỏ sản phẩm</string>
    <string name="text_number_inven">SL: 20</string>
    <string name="title_oder">Đặt hàng</string>
    <string name="text_name_other">Nguyễn Văn A</string>
    <string name="text_phone_other">(+84) 0907645271</string>
    <string name="text_mail_other">nguyenvana@gmail.com</string>
    <string name="text_address_other">137 Nguyễn Thị Thập - 123 Đường Nguyễn Văn Linh, Phường Hòa Minh, Quận Liên Chiểu, Đà Nẵng</string>
    <string name="text_content_other">Thời trang cho mọi người</string>
    <string name="text_note_other">Ghi chú nhận hàng</string>
    <string name="text_content_note_other">Gửi đến shop...</string>
    <string name="text_total_pay_other">Tổng số tiền (2 sản phẩm):</string>
    <string name="number_total_pay_other">590.000đ</string>
    <string name="text_method_pay_other">Phương thức thanh toán</string>
    <string name="text_pay_off_other">Thanh toán khi nhận hàng</string>
    <string name="text_pay_onl_other">Thanh toán trực tuyến</string>
    <string name="text_code_sales_other">Mã giảm giá</string>
    <string name="text_number_other">X1</string>
    <string name="title_address">Địa chỉ của bạn</string>
    <string name="titel_update_address">Chỉnh sửa địa chỉ</string>
    <string name="text_add_address">Thêm địa chỉ mới</string>
    <string name="name_address">Nguyễn Văn A</string>
    <string name="phone_address">(+84) 0907645271</string>
    <string name="mail_address">nguyenvana@gmail.com</string>
    <string name="text_address">137 Nguyễn Thị Thập - 123 Đường Nguyễn Văn Linh, Phường Hòa Minh, Quận Liên Chiểu, Đà Nẵng</string>
    <string name="text_default">Mặc định</string>
    <string name="text_udpate_address">Chỉnh sửa</string>
    <string name="title_add_address">Thêm địa chỉ</string>
    <string name="text_fullname_add_address">Họ và tên người nhận</string>
    <string name="text_email_add_address">Email</string>
    <string name="text_phone_add_address">Số điện thoại</string>
    <string name="text_infor_add_address">Thông tin địa chỉ</string>
    <string name="text_default_add_address">Đặt địa chỉ mặc định</string>
    <string name="text_save_add_address">Lưu</string>
    <string name="hint_name_add_address">nguyenvanax</string>
    <string name="hint_email_add_address">example@gmail.com</string>
    <string name="hint_phone_add_address">0000xxxx</string>
    <string name="hint_infor_add_address">Số, đường, quận, huyện, thành phố</string>
    <string name="hint_content_search">Nội dung tìm kiếm</string>
    <string name="text_detail">Chi tiết</string>
    <string name="text_empty">Không tìm thấy nội dung tìm kiếm</string>
    <string name="name_setting">Nguyễn Văn A</string>
    <string name="mail_setting">nguyenvana@gmail.com</string>
    <string name="text_update_infor_account">Cập nhật thông tin tài khoản</string>
    <string name="text_address_receive">Địa chỉ nhận hàng</string>
    <string name="text_change_pass">Đổi mật khẩu</string>
    <string name="text_about_us">Về chúng tôi</string>
    <string name="text_return_policy">Chính sách đổi trả</string>
    <string name="text_contact">Liên hệ</string>
    <string name="text_logout">Đăng xuất</string>
    <string name="content_about_us">Chào mừng bạn đến với Unisex - Thời trang cho mọi người</string>
    <string name="content2_about_us">Chúng tôi là Unisex Store, nơi nơi bạn có thể khám phá và trải nghiệm thế giới thời trang thông qua con đường cá nhân hóa. Tại đây, chúng tôi không chỉ cung cấp những sản phẩm thời trang chất lượng cao, mà còn là điểm đến để bạn tự do thể hiện phong cách cá nhân và sáng tạo.</string>
    <string name="content3_about_us">Tầm nhìn của chúng tôi</string>
    <string name="content4_about_us">Chúng tôi tin rằng thời trang không chỉ là về việc mặc đẹp, mà còn là về cách bạn tự tin và biểu đạt bản thân. Tại Unisex Store, chúng tôi mong muốn tạo ra một cộng đồng nơi mọi người được khích lệ khám phá phong cách của họ một cách tự tin và độc đáo.</string>
    <string name="content5_about_us">Sứ mệnh của chúng tôi</string>
    <string name="content6_about_us">Sứ mệnh của chúng tôi là mang đến cho bạn trải nghiệm mua sắm thời trang độc đáo và thoải mái nhất. Chúng tôi cam kết cung cấp những sản phẩm chất lượng, xu hướng mới nhất và dịch vụ khách hàng xuất sắc. Chúng tôi tin rằng mỗi người đều có câu chuyện riêng và phong cách cá nhân, và chúng tôi muốn giúp bạn kể nên câu chuyện đó thông qua những bộ trang phục đẹp và độc đáo.</string>
    <string name="content7_about_us">Đội ngũ sáng lập</string>
    <string name="content8_about_us">Unisex Store được thành lập bởi nhóm đam mê thời trang. Chúng tôi đồng lòng với niềm đam mê để tạo ra một không gian mua sắm thú vị và độc đáo dành cho những người yêu thời trang trên khắp thế giới.</string>
    <string name="content9_about_us">Hãy đồng hành cùng chúng tôi trên hành trình khám phá phong cách cá nhân của bạn. Cảm ơn bạn đã chọn Unisex Store!</string>
    <string name="content_policy">Chính sách đổi trả của Unisex</string>
    <string name="content1_policy">Chúng tôi cam kết đem lại sự hài lòng cao nhất cho bạn khi mua sắm tại Unisex Store. Dưới đây là chính sách đổi trả của chúng tôi để đảm bảo bạn có trải nghiệm mua sắm an tâm và thuận lợi.</string>
    <string name="content2_policy">1. Điều Kiện Đổi Trả:</string>
    <string name="content3_policy">- Sản phẩm cần phải ở trong tình trạng mới và không bị hư hại.</string>
    <string name="content4_policy">- Bạn có quyền đổi trả sản phẩm trong vòng 7 ngày kể từ ngày nhận hàng.</string>
    <string name="content5_policy">- Đối với quần áo và phụ kiện, nhãn mác và bao bì gốc cần được giữ nguyên.</string>
    <string name="content6_policy">2. Quy Trình Đổi Trả:</string>
    <string name="content7_policy">- Bước 1: Liên hệ với bộ phận chăm sóc khách hàng của chúng tôi qua Email:shop.unisex.dutn@gmail.com hoặc Phone:0353298917 để thông báo về ý định đổi trả.</string>
    <string name="content8_policy">- Bước 2: Chúng tôi sẽ cung cấp hướng dẫn chi tiết về quy trình đổi trả và địa chỉ gửi hàng trở lại.</string>
    <string name="content_contact">Liên hệ chúng tôi</string>
    <string name="content1_contact">Chào mừng bạn đến với Unisex - nơi bạn có thể kết nối và chia sẻ niềm đam mê về thời trang. Chúng tôi rất mong muốn lắng nghe ý kiến và phản hồi của bạn.</string>
    <string name="content2_contact">Thông Tin Liên Hệ:</string>
    <string name="content3_contact">Địa Chỉ:</string>
    <string name="content4_contact">587 Nguyễn Tất Thành - Thanh Khê - Đà Nẵng</string>
    <string name="content5_contact">Điện Thoại:</string>
    <string name="content6_contact">0353298917 - 0775098507</string>
    <string name="content7_contact">Email:</string>
    <string name="content8_contact">shop.unisex.dutn@gmail.com</string>
    <string name="content9_contact">Giờ Làm Việc:</string>
    <string name="content10_contact">Thứ 2 - Chủ Nhật: 8:00 sáng - 8:00 tối</string>
    <string name="content11_contact">Chúng tôi xin chân thành cảm ơn sự ủng hộ của bạn và hân hạnh được phục vụ bạn tại Unisex Store.</string>
    <string name="text_cancel_bill">Lý do hủy</string>
    <string name="radio1">Tôi muốn cập nhật địa chỉ/sđt nhận hàng</string>
    <string name="radio2">Tôi muốn thêm/thay đổi mã giảm giá</string>
    <string name="radio3" tools:ignore="TypographyEllipsis">Tôi muốn thay đổi sản phẩm(kích thước, sô lượng... )</string>
    <string name="radio4">Tôi muốn thay đổi hình thước thanh toán</string>
    <string name="radio5" tools:ignore="TypographyEllipsis">Tôi tìm thấy chỗ mua khác tốt hơn (rẻ hơn, uy tín hơn, giao nhanh hơn... </string>
    <string name="radio6">Tôi không có nhu cầu mua nữa</string>
    <string name="radio7">Tôi không tim thấy lý do phù hợp</string>
    <string name="text_confirm">Xác nhận</string>
</resources>