<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/btn_cancel_bottom_sheet_bill"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="14dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_cancel" />

    <TextView
        android:id="@+id/textView33"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/sf_pro_display_medium"
        android:text="@string/text_cancel_bill"
        android:textColor="@color/primary"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_12345"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:src="@drawable/line_item_add_cart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView33" />

    <RadioGroup
        android:id="@+id/radioGroup_bill"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_12345">

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/radioButton5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:button="@drawable/bg_radio"
            android:fontFamily="@font/sf_pro_display_regular"
            android:paddingStart="10dp"
            android:text="@string/radio1"
            android:textColor="@color/primary"
            android:textSize="15sp"
            tools:ignore="RtlSymmetry" />

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/radioButton6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:button="@drawable/bg_radio"
            android:fontFamily="@font/sf_pro_display_regular"
            android:paddingStart="10dp"
            android:text="@string/radio2"
            android:textColor="@color/primary"
            android:textSize="15sp"
            tools:ignore="RtlSymmetry" />

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/radioButton7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:button="@drawable/bg_radio"
            android:fontFamily="@font/sf_pro_display_regular"
            android:paddingStart="10dp"
            android:text="@string/radio3"
            android:textColor="@color/primary"
            android:textSize="15sp"
            tools:ignore="RtlSymmetry" />

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/radioButton3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:button="@drawable/bg_radio"
            android:fontFamily="@font/sf_pro_display_regular"
            android:paddingStart="10dp"
            android:text="@string/radio4"
            android:textColor="@color/primary"
            android:textSize="15sp"
            tools:ignore="RtlSymmetry" />

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/radioButton4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:button="@drawable/bg_radio"
            android:fontFamily="@font/sf_pro_display_regular"
            android:paddingStart="10dp"
            android:text="@string/radio5"
            android:textColor="@color/primary"
            android:textSize="15sp"
            tools:ignore="RtlSymmetry" />

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/radioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:button="@drawable/bg_radio"
            android:fontFamily="@font/sf_pro_display_regular"
            android:paddingStart="10dp"
            android:text="@string/radio6"
            android:textColor="@color/primary"
            android:textSize="15sp"
            tools:ignore="RtlSymmetry" />

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/radioButton2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:button="@drawable/bg_radio"
            android:fontFamily="@font/sf_pro_display_regular"
            android:paddingStart="10dp"
            android:text="@string/radio7"
            android:textColor="@color/primary"
            android:textSize="15sp"
            tools:ignore="RtlSymmetry" />
    </RadioGroup>

    <LinearLayout
        android:id="@+id/btn_apply_reason_cancel"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:background="@color/gray1"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup_bill">

        <TextView
            android:id="@+id/tv_apply_reason_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sf_pro_display_regular"
            android:text="@string/text_confirm"
            android:textColor="@color/linear"
            android:textSize="17sp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>