<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tv_name_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginTop="14dp"
        android:fontFamily="@font/sf_pro_display_medium"
        android:text="@string/name_address"
        android:textColor="@color/primary"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_phone_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone_address"
        android:textColor="@color/text1"
        android:fontFamily="@font/sf_pro_display_regular"
        android:textSize="15sp"
        android:layout_marginStart="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_name_address"
        app:layout_constraintStart_toEndOf="@+id/tv_name_address"
        app:layout_constraintTop_toTopOf="@+id/tv_name_address" />

    <TextView
        android:id="@+id/tv_email_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/sf_pro_display_regular"
        android:text="@string/mail_address"
        android:textColor="@color/text2"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="@+id/tv_name_address"
        app:layout_constraintTop_toBottomOf="@+id/tv_name_address" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginEnd="44dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_email_address">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_address"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/textView22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        android:background="@drawable/bgr_text_default"
        android:fontFamily="@font/sf_pro_display_medium"
        android:gravity="center"
        android:text="@string/text_default"
        android:textColor="@color/text3"
        android:textSize="13dp"
        app:layout_constraintStart_toStartOf="@+id/constraintLayout2"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_udpate_address"
        android:fontFamily="@font/sf_pro_display_medium"
        android:textSize="15sp"
        android:textColor="@color/red"
        android:layout_marginEnd="14dp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_phone_address"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_phone_address" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/line_address"
        android:layout_marginTop="14dp"
        android:layout_marginStart="14dp"
        android:layout_marginEnd="14dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView22" />

</androidx.constraintlayout.widget.ConstraintLayout>
