<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragment.settingsFragment.other.ContactActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="0dp"
        app:cardElevation="8dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/iv_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:src="@drawable/arrow_left" />

            <TextView
                android:id="@+id/ContactText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/sf_pro_display_medium"
                android:text="@string/text_contact"
                android:textColor="@color/primary"
                android:textSize="19sp" />

        </androidx.appcompat.widget.Toolbar>
    </androidx.cardview.widget.CardView>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView40"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/sf_pro_display_bold"
                android:text="@string/content_contact"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:layout_marginTop="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="6dp"
                android:layout_marginTop="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView40">

                <TextView
                    android:id="@+id/textView44"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/content1_contact"
                    android:fontFamily="@font/sf_pro_display_regular"
                    android:textSize="14sp"
                    android:textColor="@color/black"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/textView41"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/sf_pro_display_bold"
                android:text="@string/content2_contact"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayout7" />

            <TextView
                android:id="@+id/textView42"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/sf_pro_display_bold"
                android:text="@string/content3_contact"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView41" />

            <TextView
                android:id="@+id/textView43"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sf_pro_display_regular"
                android:text="@string/content4_contact"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:layout_marginStart="10dp"
                app:layout_constraintBottom_toBottomOf="@+id/textView42"
                app:layout_constraintStart_toEndOf="@+id/textView42"
                app:layout_constraintTop_toTopOf="@+id/textView42" />

            <TextView
                android:id="@+id/textView440"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/sf_pro_display_bold"
                android:text="@string/content5_contact"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView42" />

            <TextView
                android:id="@+id/textView430"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sf_pro_display_regular"
                android:text="@string/content6_contact"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:layout_marginStart="10dp"
                app:layout_constraintBottom_toBottomOf="@+id/textView440"
                app:layout_constraintStart_toEndOf="@+id/textView440"
                app:layout_constraintTop_toTopOf="@+id/textView440" />
            <TextView
                android:id="@+id/textView490"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/sf_pro_display_bold"
                android:text="@string/content7_contact"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView440" />

            <TextView
                android:id="@+id/textView830"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sf_pro_display_regular"
                android:text="@string/content8_contact"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:layout_marginStart="10dp"
                app:layout_constraintBottom_toBottomOf="@+id/textView490"
                app:layout_constraintStart_toEndOf="@+id/textView490"
                app:layout_constraintTop_toTopOf="@+id/textView490" />

            <TextView
                android:id="@+id/textView4870"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/sf_pro_display_bold"
                android:text="@string/content9_contact"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView490" />
            <TextView
                android:id="@+id/textView8130"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sf_pro_display_regular"
                android:text="@string/content10_contact"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:layout_marginStart="10dp"
                app:layout_constraintBottom_toBottomOf="@+id/textView4870"
                app:layout_constraintStart_toEndOf="@+id/textView4870"
                app:layout_constraintTop_toTopOf="@+id/textView4870" />
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout71"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="6dp"
                android:layout_marginTop="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView4870">

                <TextView
                    android:id="@+id/textView448"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/content11_contact"
                    android:fontFamily="@font/sf_pro_display_regular"
                    android:textSize="14sp"
                    android:textColor="@color/black"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>